[package]
name = "tket-rs"
version = "0.1.0"
authors = ["John Children <john.children@cambridgequantum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = { version = "0.22.1" }
cxx = "1.0.68"

[build-dependencies]
conan = "0.2"
autocxx-build = { version = "0.22.1" }
